# LLD_tutorial

Concepts/: SOLID.ipynb
DesignPatterns/: Introduction.ipynb
DesignPatterns/Creational/: Creational.ipynb
DesignPatterns/Creational/1. FactoryMethod/: FactoryMethod.ipynb
DesignPatterns/Creational/1. FactoryMethod/Example1/: CMakeLists.txt  Constants.hpp  (+4 more)
DesignPatterns/Creational/2. AbstractFactory/: AbstractFactory.ipynb
DesignPatterns/Creational/3. Builder/: Builder.ipynb
DesignPatterns/Creational/4. Prototype/: Prototype.ipynb
DesignPatterns/Creational/5. Singleton/: Example.cpp  Singleton.ipynb  a.out
projects/Logger/: CMakeLists.txt  Driver.cpp  Logger.hpp  dataConstants.hpp
projects/Logger/LogIO/: ConsoleLogger.hpp  DatabaseLogger.hpp  FileLogger.hpp  ILogObserver.hpp  LoggerIOManager.hpp
projects/Logger/include/: AbstractLogger.hpp  DebugLogger.hpp  ErrorLogger.hpp  InfoLogger.hpp  LogManager.hpp
projects/parking_lot/: CMakeLists.txt  Driver.cpp  ParkingApi.cpp  a.out  dataUtil.hpp
projects/parking_lot/ParkingSpot/: CMakeLists.txt  FourWheelerParkingSpot.cpp  FourWheelerParkingSpotManager.cpp  ParkingSpot.cpp  ParkingSpotFactory.hpp  ParkingSpotManager.cpp  TwoWheelerParkingSpot.cpp  TwoWheelerParkingSpotManager.cpp
projects/parking_lot/ParkingSpot/include/: FourWheelerParkingSpot.hpp  FourWheelerParkingSpotManager.hpp  ParkingSpot.hpp  ParkingSpotManager.hpp  TwoWheelerParkingSpot.hpp  TwoWheelerParkingSpotManager.hpp
projects/parking_lot/Ticket/: CMakeLists.txt  Ticket.cpp
projects/parking_lot/Ticket/include/: Ticket.hpp
projects/parking_lot/Vehicle/: CMakeLists.txt  FourWheeler.cpp  TwoWheeler.cpp
projects/parking_lot/Vehicle/include/: FourWheeler.hpp  TwoWheeler.hpp  Vehicle.hpp
projects/parking_lot/src/: CMakeLists.txt  Entrance.cpp
projects/parking_lot/src/include/: Entrance.hpp
(+25 files in other folders)
